# LLM-Doc

./: .gitignore  LICENSE  PHASES.md  README.md  pyproject.toml  quant-doctor-flowchart.md
docs/: arc-integration.md  dump-format.md  ladder-qwen2.5-32b.json  validation.md
scripts/: arc_npy_to_dump.py  make_synthetic_dumps.py  quant_ladder.py  render_ladder.py
src/quant_doctor/: __init__.py  capture.py  classifier.py  cli.py  diagnosis.py  dumps.py  engine.py  loader.py  recipe.py  report.py  synthetic.py
src/quant_doctor/metrics/: __init__.py  interpretability.py  propagation.py  statistical.py
tests/: test_classifier.py  test_ensemble.py  test_metrics.py  test_moe.py  test_multiprompt.py  test_recipe.py  test_thresholds.py
